// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Toast > Icon.vue should renders STD ToastIcon 1`] = `
<div class="std-toast-icon-container">
  <div class="std-toast-icon-wrap std-toast-icon-wrap--default"><i class="std-icon bi-star std-toast-icon"></i></div>
</div>
`;

exports[`Toast > Icon.vue should renders STD ToastIcon error 1`] = `
<div class="std-toast-icon-container">
  <div class="std-toast-icon-wrap std-toast-icon-wrap--error"><i class="std-icon bi-exclamation-circle std-toast-icon"></i></div>
</div>
`;

exports[`Toast > Icon.vue should renders STD ToastIcon info 1`] = `
<div class="std-toast-icon-container">
  <div class="std-toast-icon-wrap std-toast-icon-wrap--info"><i class="std-icon bi-info-circle std-toast-icon"></i></div>
</div>
`;

exports[`Toast > Icon.vue should renders STD ToastIcon success 1`] = `
<div class="std-toast-icon-container">
  <div class="std-toast-icon-wrap std-toast-icon-wrap--success"><i class="std-icon bi-check2 std-toast-icon"></i></div>
</div>
`;

exports[`Toast > Icon.vue should renders STD ToastIcon warn 1`] = `
<div class="std-toast-icon-container">
  <div class="std-toast-icon-wrap std-toast-icon-wrap--warn"><i class="std-icon bi-exclamation-triangle std-toast-icon"></i></div>
</div>
`;
